# automating_eeg_preprocessing_pipeline

./: .gitignore  PIPELINE_DOCS.md  agents.py  bad_channel_detector.py  eeg_utils.py  ica_discrimination_agent.py  main.py  pipeline_graph.py  pipeline_state.py  pyproject.toml  slow_drift_analysis_agent.py  todo.md
drafts/: erpcore_process.py  mistral_vision_test.py  play_with_openneuro.py  process_mne.py
main/: main.py
server/: alembic.ini  database.py  main.py  models.py  utils.py
server/alembic/: env.py
server/alembic/versions/: 1a40dc836fef_init_db.py
